--- a/manual/20250225.md
+++ b/manual/20250225.md
@@ -21,3 +21,17 @@ window -> powershell -> 우클릭 해서 관리자 권한으로 실행
 
 Get-ExecutionPolicy
 Set-ExecutionPolicy RemoteSigned -Scope CurrentUser -Force
+
+repository명 :
+
+web_development_react
+
+description :
+
+코리아아이티아카데미_react 수업
+
+git add .
+git commit -m "first commit"
+
+git config user.name "Leehaon"
+git config user.email "개인 정보"
