20250227 useRef / custom hook / context API 수업

--- a/manual/20250226.md
+++ b/manual/20250226.md
@@ -229,17 +229,17 @@ export default memo(HeaderText);
   함수 컴포넌트 방식을 사용할 때 얻을 수 있는 이점 중 하나는 동일한 입력값에 대해 반환값이 항상 동일하기 때문에 단위 테스트가 간단하는 점이 있습니다.
   
   조건부 렌더링
- */
+*/
 
 
- ### 조건부 렌더링
+### 조건부 렌더링
 
- : 조건문을 이용하여 조건이 true / false일 때 다른 UI를 렌더링할 수 있다
- (저희는 vanilla JS로 짰습니다 signin 페이지와 signup페이지로).
- 해당 기능은 일부 요소를 표시하거나 숨기고 인증을 처리하는 등의 작업에
- 이용 가능합니다.
+: 조건문을 이용하여 조건이 true / false일 때 다른 UI를 렌더링할 수 있다
+(저희는 vanilla JS로 짰습니다 signin 페이지와 signup페이지로).
+해당 기능은 일부 요소를 표시하거나 숨기고 인증을 처리하는 등의 작업에
+이용 가능합니다.
 
- ```jsx
+```jsx
 function MyComponent(props) {
   const isLoggedIn = props.isLoggedIn;
 
@@ -253,14 +253,14 @@ function MyComponent(props) {
     <Login />
   )
 }
- ```
+```
 
- // 동일한 구조라고 가정했을 때 결국 if - else 구문이니까
- // 우리는 위의 코드를 축약시킬 수 있을 겁니다. -> _ _ _ _ _
+// 동일한 구조라고 가정했을 때 결국 if - else 구문이니까
+// 우리는 위의 코드를 축약시킬 수 있을 겁니다. -> _ _ _ _ _
 
- 삼항연산자 적용 코드
+삼항연산자 적용 코드
 
- ```jsx
+```jsx
 function MyComponent(props) {
   const isLoggedin = props.isLoggedin;
   return (
@@ -269,28 +269,28 @@ function MyComponent(props) {
     </>
   )
 }
- ```
+```
 
- ## React Hook
+## React Hook
 
- : 훅(Hook)은 React 16.8부터 도입된 기능으로, 함수 컴포넌트에서
- 상태와 리액트의 다른 기능을 이용하는데 사용됩니다. 
+: 훅(Hook)은 React 16.8부터 도입된 기능으로, 함수 컴포넌트에서
+상태와 리액트의 다른 기능을 이용하는데 사용됩니다. 
 
- 훅 이전에는 복잡한 컴포넌트 로직이 있는 경우 클래스 컴포넌트를 사용해야만
- 했었는데, 이를 통해 함수형 프로그래밍의 작성에 큰 도움을 주었습니다.
+훅 이전에는 복잡한 컴포넌트 로직이 있는 경우 클래스 컴포넌트를 사용해야만
+했었는데, 이를 통해 함수형 프로그래밍의 작성에 큰 도움을 주었습니다.
 
- -> 배우기는 좀 어려웠습니다.
+-> 배우기는 좀 어려웠습니다.
 
- - 리액트에서 훅을 이용하는 데에 사용되는 규칙
- 1. 항상 리액트 함수 컴포넌트의 최상위 수준에서 훅을 호출해야 함.
- 2. 반복문, 조건문, 중첩 함수 안에서 훅을 호출해서는 안된다.
- 3. 훅 이름은 use로 시작하고, 그 뒤에 훅을 이용하는 목적이 따라온다.
+- 리액트에서 훅을 이용하는 데에 사용되는 규칙
+1. 항상 리액트 함수 컴포넌트의 최상위 수준에서 훅을 호출해야 함.
+2. 반복문, 조건문, 중첩 함수 안에서 훅을 호출해서는 안된다.
+3. 훅 이름은 use로 시작하고, 그 뒤에 훅을 이용하는 목적이 따라온다.
 
- ### useState
+### useState
 
- : 상태를 선언하는 데 이용하는 useState 함수 역시 훅에 해당합니다.
+: 상태를 선언하는 데 이용하는 useState 함수 역시 훅에 해당합니다.
 
- // import {useState} from 'react';
+// import {useState} from 'react';
 /*
   1. Counter 컴포넌트를 생성하고 초기값이 0인 count 상태를 선언.
  */
@@ -382,11 +382,11 @@ function MyComponent(props) {
   이상까지 작성했을 때 App.jsx의 button과 비교를 해보면 이제 하나만 차이가 납니다. 저희가 작성한 방식은 call3() 유형으로 매개변수는 없는데, return은 있는 형태였습니다.
 
   그런데 App.jsx를 확인해봤을 때 setCount((count) => count+1)
-  으로 작성되어 call4()유형(매개변수 o / return o)으로 작성되있음을 확인할 수 있습니다.
+  으로 작성되어 call4()유형(매개변수 o / return o)으로 작성되었음을 확인할 수 있습니다.
 
 
-  이상의 차이가 나는 이유는 리액테의 성격 때문인데,
-  상태 없데이트는 비동기적으로 일어납니다. 새 상태 값이 현재 상태 값에 
+  이상의 차이가 나는 이유는 리액트의 성격 때문인데,
+  상태 업데이트는 비동기적으로 일어납니다. 새 상태 값이 현재 상태 값에
   따라 달라질 수 있다는 문제가 있습니다.
  */
 
@@ -421,7 +421,7 @@ function MyComponent(props) {
   이상의 현상이 일어나는 이유 :
   1. setCount(count + 1)은 현재 상태의 고정된 값을 사용해 업데이트가 일어남
 
-  2. 이상의 이유로 count의 값은 handleClick을 호출했을 시점에 '고정'되어있음.
+  2. 이상을 이유로 count의 값은 handleClick을 호출했을 시점에 '고정'되어있음.
 
   3. 1, 2를 이유로 세 번의 setCount는 초기값인 count=0을 시점으로 1을 더해주기 때문에
 
@@ -432,8 +432,7 @@ function MyComponent(props) {
 
   그래서 이상의 문제를 해결하기 위한 방법
   : 함수형 업데이트(Fuction Update)
- */ 
-
+ */
 
 // import {useState} from 'react';
 
@@ -465,3 +464,8 @@ git commit -m "feat: 20250226 useState lesson"
 git push
 
 하고 로그아웃
+
+
+
+![img](./generalGlobalScopeFlow.png)
+![img2](./contextAPIGlobalScopeFlow.png)
