--- a/manual/20250304.md
+++ b/manual/20250304.md
@@ -176,7 +176,7 @@ let externalValue: unknown;
 unknown과 typeof를 생각했을 때, 외부에서 자료형을 알 수 없는 변수를 받아왔을 경우,
 typeof를 통해서 자료형을 확인하는 과정이 필요하다고 할 수 있겠습니다.
 
-* 타입스크립트는 any 타입(JS에서 있는)도 제공합니다. any 타입을 이용하여 변수를 정의하는 경우 TS는 해당 변수에 대해 타입 검사 또는 추론을 수행하지 않습니다. 타입스크립트의 정적 타입 분석을 무효화하기 때문에 가능한한 any 타입은 이용하지 않는 것이 권장됩니다.
+* 타입스크립트는 any 타입(JS에서 있는)도 제공합니다. any 타입을 이용하여 변수를 정의하는 경우 TS는 해당 변수에 대해 타입 검사 또는 추론을 수행하지 않습니다. 타입스크립트의 정적 타입 분석을 무효화하기 때문에 가능한 any 타입은 이용하지 않는 것이 권장됩니다.
 
 ### 배열(Array)
 
