20250317 context API 수업

--- a/manual/20250317.md
+++ b/manual/20250317.md
@@ -107,13 +107,13 @@ git push
 
 ### 상태관리 라이브러리란?
 
-: 간단한 프로젝트에는 props를 통한 단방향 데이터 흐름이 가시성이 높을 수 있지만 일정 크기 이상이 되엇을 경우에은 state의 개수가 늘어나게 되고, props를 통한 데이터 전달이 어려워집니다.
+: 간단한 프로젝트에서는 props를 통한 단방향 데이터 흐름이 가시성이 높을 수 있지만 일정 크기 이상이 되었을 경우에는 state의 개수가 늘어나게 되고, props를 통한 데이터 전달이 어려워집니다.
 
 ![프롭스드릴링](./propsDrilling01.png)
 
-이상의 그림  예시에서 책은 철수에게 한 번에 전달되지 않고, 중간의 학생들을 거쳐서 전달되게 되는데, 중간의 학생들은 책이 필요하지 않지만 철수에게 전달되려면 꼭 거쳐가야합니다. 전달 중 데이터가 훼손될 수도 있고, 많은 사람을 통해 전달해야 하기에 철수가 아니라 다른 학생(영희)에게 전달될 수도 있는 등의 잠재적인 문제가 있습니다.
+이상의 그림 예시에서 책은 철수에게 한 번에 전달되지 않고, 중간의 학생들을 거쳐서 전달되게 되는데, 중간의 학생들은 책이 필요하지 않지만 철수에게 전달되려면 꼭 거쳐가야합니다. 전달 중 데이터가 훼손될 수도 있고, 많은 사람을 통해 전달해야 하기에 철수가 아니라 다른 학생(영희)에게 전달될 수도 있는 등의 잠재적인 문제가 있습니다.
 
-그렇다면 프롭스 드릴링을 정의하자면 
+그렇다면 프롭스 드릴링을 정의하자면
 
 : props를 통해 데이터를 전달하는 과정에서 중간 컴포넌트는 데이터가 필요하지 않아도 하위 컴포넌트에 전달하기 위해 props를 받아 단계별로 전달해야 하는 과정을 의미함.
 
@@ -125,24 +125,24 @@ function ComponentA() {
   return <ComponentC data={data} />;
 }
 
-function ComponentC({data}) {
+function ComponentC({ data }) {
   return <ComponentE data={data} />;
 }
 
-function ComponentE({data}) {
+function ComponentE({ data }) {
   return <ComponentG data={data} />;
 }
 
-function ComponentG({data}) {
+function ComponentG({ data }) {
   return <ComponentH data={data} />;
 }
 
-function ComponentH({data}) {
+function ComponentH({ data }) {
   return <>{data}</>;
 }
 
 function App() {
-  return <ComponentA />;
+  return <ComponentA />; 
 }
 
 export default App;
@@ -152,7 +152,7 @@ export default App;
 
 그리고 중첩된 컴포넌트를 통해 props가 전달되면 가독성이 떨어지고, 데이터의 흐름이 복잡해져 유지보수상의 어려움도 존재합니다.
 
-이런 문제를 해결하기 위해 리액트 내장 Hook인 ContextAPI나 redux, recoil과 같은 상태 관리 라이브러리를 사용합니다.(전에 이야기한 적은 있습니다)
+이런 문제를 해결하기 위해 리액트 내장 Hook인 ContextAPI나 redux, recoil과 같은 상태 관리 라이브러리를 사용합니다(전에 이야기한 적은 있습니다.)
 
 kpoplist
 
@@ -164,9 +164,9 @@ Main.jsx
 src
 App.jsx
 App.css
-main.jsx -> 나중에 바꿀 수도 있습니다.
+Main.jsx -> 나중에 바꿀 수도 있습니다.
 
-index.jsx -> main.jsx로 다시 원상복구 시키겠습니다.
+index.jsx -> main.jsx로 다시 원상 복구 시키겠습니다.
 
 터미널
 
@@ -174,14 +174,14 @@ npm install uuid
 
 ```jsx
 
-    <>
-      <Button data={data} setPlaylist={setPlaylist} filter='redvlvet'>
-        🎈 레드벨벨 노래 찾기
+<>
+      <Button data={data} setPlaylist={setPlaylist} filterType="redvelvet">
+        🎈 레드벨벳 노래 찾기
       </Button>
-      <Button data={data} setPlaylist={setPlaylist} filter='mail'>
+      <Button data={data} setPlaylist={setPlaylist} filterType="male">
         🎮 남자 아티스트 노래 찾기
       </Button>
-      <Button data={data} setPlaylist={setPlaylist} filter='femil'>
+      <Button data={data} setPlaylist={setPlaylist} filterType="female">
         ✨ 여자 아티스트 노래 찾기
       </Button>
       <KpopList playlist={playlist} />
@@ -195,4 +195,47 @@ npm install uuid
 2. Main.jsx에서 Button 컴포넌트로 data와 setPlaylist를 전달하면서 filterType을 전달
 3. Button.jsx에서 filterType에 따라 data를 필터링하여 setPlaylist를 호출
 4. playlist가 변경되면 KpopList.jsx에서 재렌더링
-5. 
+5. npm install uuid를 사용
+
+### Props Drilling의 문제점
+
+: Props Drilling은 데이터를 사용하지 않는 App의 직계 자식 컴포넌트 또한 props를 전달받아야한다는 점입니다. Main 컴포넌트는 자식 컴포넌트에 props를 보내주기만 할 뿐이고, 직접 필요로 하지 않기 때문에 메모리적으로 비효율적입니다.
+
+KPopList 컴포넌트 및 Button 컴포넌트가 직접 데이터를 사용하는 것이 효율적으로 보입니다.
+
+useContext는 전역적으로 데이터를 공유하기 때문에 중간 다리 역할만하는(여기서는 Main.jsx) 컴포넌트를 건너 뛰고 데이터가 직접적으로 필요한 컴포넌트에서 바로 사용이 가능하도록 합니다. 따라서 이상의 모든 하위 컴포넌트에 props가 전달되는 문제를 피할 수 있습니다.
+
+### Context API 및 useContext Hook 이용, props drilling 해결하기
+
+새 프로젝트
+
+npm create vite@4.3
+
+kpoplistcontext
+
+react
+
+javascript
+
+폴더 이동
+
+npm install
+npm run dev
+
+git add .
+git commit -m "feat: context API applied kpop list started"
+git push
+
+다하셨으면 App.jsx에 프래그먼트 남기고 초기화
+
+src -> components 폴더 -> Button.jsx / KPopList.jsx / Main.jsx
+src -> context 폴더 -> context.jsx
+App.css 파일 kpoplist의 App.css 코드 그대로 붙여넣기
+
+
+git add .
+git commit -m "feat: 20250317 context API lesson"
+
+git push
+
+로그아웃
